--- a/images/bo-bon-mua-epm21069-180x200/config.ini
+++ b/images/bo-bon-mua-epm21069-180x200/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-bon-mua-epm21069-180x200.html
 lastopen = 2024-06-07 00:16:06
 
 [search]
-lastsearch = 2024-07-31 18:39:04
+lastsearch = 2024-07-31 18:45:56
 
 [everon.online]
 match = -7.4%%
@@ -12,9 +12,9 @@ title = Bộ Chăn Ga Gối Everon SR01 Chính Hãng
 url = https://everon.online/products/bo-everon-sr01
 
 [everonvn.com.vn]
-match = -66.7%%
-title = Bộ Chăn Ga Everon Est-21039 màu xanh chất liệu gỗ tổng ...
-url = https://everonvn.com.vn/everon/2114/bo-everon-est-21039
+match = -74.1%%
+title = Bộ Chăn Ga Everon Epm-21071 chất liệu Gỗ Sồi (Modal) mẫu ...
+url = https://everonvn.com.vn/everon/2130/bo-everon-epm-21071?srsltid=AfmBOor-MExvmTE45zQP-1AsEOsAD7DBtIjVP_zTPymxUXtgREnZbdEj
 
 [tongdailyeveron.com.vn]
 match = -5.3%%
@@ -24,7 +24,7 @@ url = https://tongdailyeveron.com.vn/collections/bo-chan-ga-giam-gia
 [demxanh.com]
 match = -7.4%%
 title = Bộ chăn ga gối Everon EPM-21069 | Khuyến mãi
-url = https://demxanh.com/bo-chan-ga-goi-everon-epm-21069.html
+url = https://demxanh.com/bo-chan-ga-goi-everon-epm-21069.html?srsltid=AfmBOopyV0gbSPRJy6k99hPcqg4AadeerabQ7up6X8DhMhfqKcyFb0gV
 
 [everonhanquoc.vn]
 match = 18.5%%
