--- a/images/chieu-lac-soc-08/config.ini
+++ b/images/chieu-lac-soc-08/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-08.html
 lastopen = 2024-06-06 16:42:06
 
 [search]
-lastsearch = 2024-07-31 16:31:20
+lastsearch = 2024-07-31 18:58:25
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -17,9 +17,9 @@ title = Hướng dẫn đo size lắc và vòng tay
 url = https://www.pnj.com.vn/blog/huong-dan-do-size-lac-va-vong-tay/
 
 [www.facebook.com]
-match = -218.8%%
-title = 21-08-2023 Thời sự chiều 18h30 | 21-08-2023 Thời sự chiều ...
-url = https://www.facebook.com/soctrangtv/videos/21-08-2023-thời-sự-chiều-18h30/1110320116612660/
+match = -187.5%%
+title = 08-11-2022 Thời sự chiều 18h30 | By Truyền Hình Sóc Trăng
+url = https://www.facebook.com/soctrangtv/videos/08-11-2022-thời-sự-chiều-18h30/1168759537402748/
 
 [thuvienphapluat.vn]
 match = -206.2%%
@@ -37,9 +37,9 @@ title = Trẻ 8 tháng tuổi: Phát triển thể chất, vận động, nhận
 url = https://www.vinmec.com/vie/bai-viet/tre-8-thang-tuoi-phat-trien-chat-van-dong-nhan-thuc-va-cam-xuc-vi/
 
 [www.google.com]
-match = -112.5%%
-title = maps/@21.001139,105.847882,17z?hl=vi
-url = https://www.google.com/maps/@21.001139,105.847882,17z?hl=vi
+match = -200.0%%
+title = https://www.google.com/maps/@21.0506866,105.804746...
+url = https://www.google.com/maps/@21.0506866,105.8047464,19z?hl=vi
 
 [thongtindoingoai.caobang.gov.vn]
 match = -212.5%%
@@ -542,9 +542,9 @@ title = Việt Nam là quốc gia năng động nhất, tăng trưởng nhanh nh
 url = https://xaydungchinhsach.chinhphu.vn/thu-tuong-gui-thong-diep-quan-trong-trong-phat-bieu-chinh-sach-tai-dai-hoc-danh-gia-nhat-xu-so-kim-chi-119240703153709673.htm
 
 [www.momo.vn]
-match = -37.5%%
-title = Lịch chiếu phim Lotte West Lake
-url = https://www.momo.vn/cinema/rap/lotte-cinema/lotte-west-lake-363
+match = -87.5%%
+title = Ý nghĩa số Chủ đạo 8 trong Thần số học
+url = https://www.momo.vn/blog/than-so-hoc-so-8-c117dt187
 
 [vietyen.bacgiang.gov.vn]
 match = -125.0%%
