--- a/images/ga-phu-es1807-180x200/config.ini
+++ b/images/ga-phu-es1807-180x200/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/ga-phu-es1807-180x200.html
 lastopen = 2024-06-07 01:02:20
 
 [search]
-lastsearch = 2024-07-31 09:54:24
+lastsearch = 2024-07-31 18:44:31
 
 [everonvn.com.vn]
 match = 4.8%%
 title = Bộ Everon Es1804 - Esmeranda
-url = https://everonvn.com.vn/everon/606/bo-everon-es1804?srsltid=AfmBOooMsolJHujWW9gZAbA_k_MZDVOHHJnpaXSUzUVVChLNqcDPo7AA
+url = https://everonvn.com.vn/everon/606/bo-everon-es1804
 
 [everonhanoi.vn]
 match = -23.8%%
