--- a/images/ruot-nem-korea-9f-18/config.ini
+++ b/images/ruot-nem-korea-9f-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-nem-korea-9f-18.html
 lastopen = 2024-06-10 00:54:35
 
 [search]
-lastsearch = 2024-07-31 17:56:16
+lastsearch = 2024-07-31 18:52:33
 
 [en.wikipedia.org]
 match = -12.5%%
@@ -227,9 +227,9 @@ title = SSD prices could steady or even drop as NAND chip ...
 url = https://www.pcgamer.com/hardware/storage/ssd-prices-set-to-tumble-as-nand-chip-makers-boost-production/
 
 [www.youtube.com]
-match = -120.0%%
-title = Tottenham Eyes 18-Year-Old South Korean Phenom Yang ...
-url = https://www.youtube.com/watch?v=M86x5RqHfOM
+match = -135.0%%
+title = Inside The "North Korea" of Africa 🇪🇷: How It Really Is (#174)
+url = https://www.youtube.com/watch?v=lAHumbL12Z8
 
 [carnegieendowment.org]
 match = -90.0%%
@@ -337,9 +337,9 @@ title = Ratios Cedears
 url = https://www.gabrielmartin.yt/tools/ratio
 
 [www.nti.org]
-match = -15.0%%
-title = North Korea Chemical Overview
-url = https://www.nti.org/analysis/articles/north-korea-chemical/
+match = -25.0%%
+title = North Korea Chemical Facilities
+url = http://www.nti.org/analysis/articles/north-korea-chemical-facilities/
 
 [10mag.com]
 match = 0.0%%
