--- a/images/tam-trai-topper-everon18/config.ini
+++ b/images/tam-trai-topper-everon18/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tam-trai-topper-everon18.html
 lastopen = 2024-06-07 01:31:26
 
 [search]
-lastsearch = 2024-07-31 17:10:32
+lastsearch = 2024-07-31 18:53:34
 
 [everonvn.com.vn]
 match = -12.5%%
 title = Tấm trải chần Everon chất liệu 100%% cotton
-url = https://everonvn.com.vn/everon/2166/tam-trai-everon?srsltid=AfmBOooNVOTdSoxadrdojn4XKIxvvlDFnT0RYpb1dR6VABqKJc8FuNio
+url = https://everonvn.com.vn/everon/2166/tam-trai-everon
 
 [everonthaiha.com]
 match = 35.3%%
@@ -29,7 +29,7 @@ url = https://everon.online/collections/topper-tam-tang-tien-nghi
 [www.lazada.vn]
 match = -37.5%%
 title = Tấm Trải đa Năng Everon Giá Tốt T06/2024 - Lazada
-url = https://www.lazada.vn/tag/tam-trai-da-nang-everon/?srsltid=AfmBOoqPoqvaSXzr97DeNqKIJ_EgXAtBM6Md_z9MFftAFMd9HGYGEvAH
+url = https://www.lazada.vn/tag/tam-trai-da-nang-everon/
 
 [www.everonvn.vn]
 match = -20.8%%
