--- a/images/tham-chan-len-xu-1-50x80/config.ini
+++ b/images/tham-chan-len-xu-1-50x80/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-chan-len-xu-1-50x80.html
 lastopen = 2024-06-07 00:36:50
 
 [search]
-lastsearch = 2024-07-31 18:14:44
+lastsearch = 2024-07-31 18:47:19
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -17,9 +17,9 @@ title = Tham chui chan 60x80 hàng chính hãng, giao nhanh
 url = https://tiki.vn/search?q=tham chui chan 60x80
 
 [shopee.vn]
-match = -41.7%%
-title = Thảm chùi chân chữ HOME cỡ 50x80, thấm hút phong ...
-url = https://shopee.vn/Thảm-chùi-chân-chữ-HOME-cỡ-50x80-thấm-hút-phong-cách-Nhật-Bản-i.66569981.10269870886
+match = -12.5%%
+title = thảm lau chân chống trơn trượt kích thước 50x80
+url = https://shopee.vn/Thảm-lau-chân-siêu-thấm-hút-nước-5s-thảm-lau-chân-chống-trơn-trượt-kích-thước-50x80-i.351179465.22661027123
 
 [lepetit.com.vn]
 match = -79.2%%
