--- a/images/chieu-cay-moc-hoa16/config.ini
+++ b/images/chieu-cay-moc-hoa16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-moc-hoa16.html
 lastopen = 2024-06-09 22:42:25
 
 [search]
-lastsearch = 2024-08-01 02:16:36
+lastsearch = 2024-08-01 02:44:26
 
 [eva.vn]
 match = -163.2%%
@@ -22,9 +22,9 @@ title = Chiếu Trúc Xuất Nhật Mộc Hương Cao Cấp, Chiếu Điều ...
 url = https://shopee.vn/Chiếu-Trúc-Xuất-Nhật-Mộc-Hương-Cao-Cấp-Chiếu-Điều-Hòa-Mùa-Hè-i.252624902.17494018040
 
 [mocnhienfarm.com]
-match = -100.0%%
-title = Linh sam siêu bông Sông Hinh, tím hồng, lá nhỏ M1
-url = https://mocnhienfarm.com/products/linh-sam-sieu-bong
+match = -7.7%%
+title = Cây pháo bông
+url = https://mocnhienfarm.com/products/cay-phao-bong
 
 [tapchivietnamhuongsac.vn]
 match = -73.7%%
@@ -87,9 +87,9 @@ title = Cây lá bỏng thần kỳ "mọc" ra hoa hồng xanh mướt
 url = https://kenh14.vn/cay-la-bong-than-ky-moc-ra-hoa-hong-xanh-muot-20170424194942725.chn
 
 [saigonhoa.com]
-match = -68.4%%
-title = Mẹo để cây mai chiếu thủy nở rộ vào dịp Tết
-url = https://saigonhoa.com/meo-de-cay-mai-chieu-thuy-no-ro-vao-dip-tet/
+match = -89.5%%
+title = 17 cây bóng mát khuyến khích trồng đường phố
+url = https://saigonhoa.com/17-cay-bong-mat-khuyen-khich-trong-duong-pho/
 
 [nongthonviet.com.vn]
 match = -94.7%%
