--- a/images/chieu-coi-viet-thai-18/config.ini
+++ b/images/chieu-coi-viet-thai-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-coi-viet-thai-18.html
 lastopen = 2024-06-06 16:54:00
 
 [search]
-lastsearch = 2024-08-01 02:35:17
+lastsearch = 2024-08-01 02:51:47
 
 [chieutruc.info]
 match = -100.0%%
@@ -24,7 +24,7 @@ url = https://m.facebook.com/groups/400243538122762/posts/989653909181719/
 [nhathuoclongchau.com.vn]
 match = -104.5%%
 title = Mang thai 18 tuần nặng bao nhiêu cân để bé phát triển tốt?
-url = https://nhathuoclongchau.com.vn/bai-viet/thai-18-tuan-nang-bao-nhieu-thay-doi-cua-me-bau-mang-thai-18-tuan.html
+url = https://nhathuoclongchau.com.vn/bai-viet/thai-18-tuan-nang-bao-nhieu-thay-doi-cua-me-bau-mang-thai-18-tuan.html?srsltid=AfmBOor8iY6xfMDq_rTAUdKa0H6W95RL0E21MajZLRaP-sv985TpSieV
 
 [www.vinmec.com]
 match = 4.5%%
@@ -49,7 +49,7 @@ url = https://medlatec.vn/tin-tuc/su-phat-trien-cua-thai-18-tuan-va-nhung-thay-d
 [www.lazada.vn]
 match = -68.2%%
 title = 🌿Chiếu Việt Thái Cao Cấp Chính Hãng🌿 Chiếu Nhựa Việt ...
-url = https://www.lazada.vn/products/chieu-viet-thai-cao-cap-chinh-hang-chieu-nhua-viet-thai-loai-1-thuong-hieu-uy-tin-size-lon-xep-nho-gon-tien-loi_hcm-i2408709081.html
+url = https://www.lazada.vn/products/chieu-viet-thai-cao-cap-chinh-hang-chieu-nhua-viet-thai-loai-1-thuong-hieu-uy-tin-size-lon-xep-nho-gon-tien-loi_hcm-i2408709081.html?srsltid=AfmBOoovF0FXLBPbk7lPbPj_6j5h4EvABn1oubruijBm3FIGw7H82iVU
 
 [shopee.vn]
 match = -13.6%%
