--- a/images/chieu-truc-thai-den14/config.ini
+++ b/images/chieu-truc-thai-den14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-thai-den14.html
 lastopen = 2024-06-09 23:36:30
 
 [search]
-lastsearch = 2024-08-01 02:40:07
+lastsearch = 2024-08-01 02:50:24
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -77,9 +77,9 @@ title = Toàn ngành BHXH tập trung chi trả lương hưu theo mức ...
 url = https://dangcongsan.vn/bao-hiem-xa-hoi-bao-hiem-y-te-vi-an-sinh-xa-hoi/tin-tuc/toan-nganh-bhxh-tap-trung-chi-tra-luong-huu-theo-muc-huong-moi-ngay-tu-ngay-dau-671442.html
 
 [shopee.vn]
-match = -100.0%%
-title = chiếu tre thái lan loại 1 , hàng có sẵn m2xm9, m5x m9 ...
-url = https://shopee.vn/chiếu-tre-thái-lan-loại-1-hàng-có-sẵn-m2xm9-m5x-m9-m8x2m-2mx2m2-i.264060043.8153444972
+match = -42.9%%
+title = chiếu trúc hạt vàng cước đỏ thái lan đủ kích cỡ
+url = https://shopee.vn/chiếu-trúc-hạt-vàng-cước-đỏ-thái-lan-đủ-kích-cỡ-i.194586860.3058965326
 
 [baohungyen.vn]
 match = -4.8%%
