--- a/images/man-in-hoa-dep-16/config.ini
+++ b/images/man-in-hoa-dep-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-in-hoa-dep-16.html
 lastopen = 2024-06-10 01:11:01
 
 [search]
-lastsearch = 2024-08-01 00:16:53
+lastsearch = 2024-08-01 02:45:08
 
 [www.tiktok.com]
 match = -170.6%%
@@ -67,9 +67,9 @@ title = Chiêm ngưỡng mùa hoa cực đẹp ở Hà Giang vào tháng 03
 url = https://www.pinterest.com/pin/1087971222468991265/
 
 [books.google.com]
-match = -182.4%%
-title = Dictionary of Geography - Page 907 - Google Books Result
-url = https://books.google.com/books?id=GfZNAAAAcAAJ&pg=PA907&lpg=PA907&dq=man+in+hoa+dep+16&source=bl&ots=hZPWwPa6UN&sig=ACfU3U2rR-BryCZyKpU-GX0H6GMQOJdOIw&hl=en&sa=X&ved=2ahUKEwjEt_-xi9GHAxXekYkEHU5rFhMQ6AF6BAgiEAM
+match = -170.6%%
+title = Army Reserve Magazine - Volume 16 - Google Books Result
+url = https://books.google.com/books?id=m80R501TO0wC&pg=PP12&lpg=PP12&dq=man+in+hoa+dep+16&source=bl&ots=IqNtZSQZAO&sig=ACfU3U1EX0SW_ZyHxJ3cnmR_TxXsJ4ddag&hl=en&sa=X&ved=2ahUKEwi-k6enhdKHAxXSMVkFHSMaBuIQ6AF6BAgcEAM
 
 [tax.vermont.gov]
 match = -29.4%%
