--- a/images/man-tu-bung-dinh-vuong-16/config.ini
+++ b/images/man-tu-bung-dinh-vuong-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-tu-bung-dinh-vuong-16.html
 lastopen = 2024-06-06 16:41:48
 
 [search]
-lastsearch = 2024-08-01 02:25:25
+lastsearch = 2024-08-01 02:45:32
 
 [munghoangphat.com]
 match = -24.0%%
@@ -33,8 +33,8 @@ url = https://www.diepxuan.com/man-tu-bung-dinh-vuong-16.html
 
 [www.mantubung.com]
 match = -52.0%%
-title = Màn Xếp Vuông | Mùng Gấp Vuông Thông Minh Người Lớn ...
-url = https://www.mantubung.com/man-xep-vuong.html
+title = Mùng Chụp | Màn Tự Bung Thông Minh Chống Muỗi | Khuyến ...
+url = https://www.mantubung.com/
 
 [demvip.vn]
 match = 52.0%%
@@ -57,9 +57,9 @@ title = Hướng dẫn sử dụng màn tự bung đỉnh rộng chân vải Thu
 url = https://manthutrang.com/blogs/video/huong-dan-su-dung-man-tu-bung-dinh-rong-chan-vai-thu-trang
 
 [easydream.vn]
-match = -32.0%%
-title = Mùng Chụp Tự Bung -Màn chụp tự bung [16] - easy dream
-url = https://easydream.vn/mung-chup-tu-bung-man-chup-tu-bung-3-11.html
+match = -40.0%%
+title = Mùng Chụp Tự Bung Gấp Gọn Người Lớn Biên Hòa Đồng Nai
+url = https://easydream.vn/mung-chup-tu-bung-gap-gon-nguoi-lon-bien-hoa-dong-nai-287-25.html
 
 [www.youtube.com]
 match = -52.0%%
