--- a/images/nem-di-a-mon-9f-16-re/config.ini
+++ b/images/nem-di-a-mon-9f-16-re/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-di-a-mon-9f-16-re.html
 lastopen = 2024-06-10 00:47:22
 
 [search]
-lastsearch = 2024-07-31 22:45:32
+lastsearch = 2024-08-01 03:01:05
 
 [en.wikipedia.org]
 match = 0.0%%
@@ -52,9 +52,9 @@ title = Balancing Supply and Demand …. in the fast approaching ' ...
 url = https://wattclarity.com.au/articles/2020/05/nem20-balancingsupplydemand-rawofftarget/
 
 [books.google.com]
-match = -123.8%%
-title = A Critical Pronouncing Dictionary, and Expositor of the ...
-url = https://books.google.com/books?id=mjRAAAAAYAAJ&pg=RA3-PA80&lpg=RA3-PA80&dq=nem+di+a+mon+9f+16+re&source=bl&ots=BLKCs7wuqi&sig=ACfU3U0YeTGHMdppX9aa7mLruA5cvnZNIQ&hl=en&sa=X&ved=2ahUKEwiziJHgz9GHAxWJHjQIHaWWBPgQ6AF6BAhCEAM
+match = -147.6%%
+title = Lippincott's Gazetteer of the World: A Complete Pronouncing ...
+url = https://books.google.com/books?id=R9zPRFeo8ZMC&pg=PA1450&lpg=PA1450&dq=nem+di+a+mon+9f+16+re&source=bl&ots=3eFIyAI61H&sig=ACfU3U3iHdZBSQKPafV03yKie7lGWdN-2g&hl=en&sa=X&ved=2ahUKEwil2LbviNKHAxXgN2IAHSfBJAoQ6AF6BAgbEAM
 
 [www.diepxuan.com]
 match = -81.0%%
@@ -252,9 +252,9 @@ title = Idarubicine Treatment of Acute Myeloblastic Leukemia During ...
 url = https://www.jcog.com.tr/pdf/?pdf=d8ef007c2333e3bc22fd94ac0c236dcb
 
 [www.formatbiz.it]
-match = -95.2%%
-title = NEM Dubrovnik 2023, Day 2: record number of decision ...
-url = https://www.formatbiz.it/dettNews.aspx?id=10170
+match = -104.8%%
+title = Rich offer of conferences and networking from the ...
+url = https://www.formatbiz.it/dettNews.aspx?id=10605
 
 [yro.slashdot.org]
 match = -114.3%%
