--- a/images/nem-sieu-nhe-9f-14/config.ini
+++ b/images/nem-sieu-nhe-9f-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-sieu-nhe-9f-14.html
 lastopen = 2024-06-10 00:53:20
 
 [search]
-lastsearch = 2024-07-31 18:46:17
+lastsearch = 2024-08-01 02:53:33
 
 [www.lazada.vn]
 match = -61.1%%
@@ -47,9 +47,9 @@ title = Nem rán Việt Nam được ca ngợi là món ăn nhẹ ngon nhất ..
 url = https://vietnamnet.vn/nem-ran-viet-nam-duoc-ca-ngoi-la-mon-an-nhe-ngon-nhat-the-gioi-2149178.html
 
 [www.tiktok.com]
-match = -172.2%%
-title = Replying to @user74757483939 Brodard’s nem nuong sauce ...
-url = https://www.tiktok.com/@quyen_cooks/video/7216197212018068779?lang=en
+match = -155.6%%
+title = Nem nướng Ninh Hoà Dì Út #AnCungTikTok #couplecomedy ...
+url = https://www.tiktok.com/@khalinh.ne/video/7357680006492851474
 
 [www.diepxuan.com]
 match = 11.1%%
@@ -57,9 +57,9 @@ title = Điệp Xuân Nệm siêu nhẹ
 url = https://www.diepxuan.com/nem-sieu-nhe.html
 
 [m.facebook.com]
-match = -116.7%%
-title = NEM Fashion - NEM Fashion updated their cover photo.
-url = https://m.facebook.com/photo/?fbid=815333730629326&set=a.651941763635191
+match = -122.2%%
+title = Người Việt Bolsa/Orange County | ‼️NEM CHUA CÁC ...
+url = https://m.facebook.com/groups/nguoivietorangecounty/posts/2895681627248868/
 
 [emartmall.com.vn]
 match = 0.0%%
