--- a/images/tham-ni-xop-mau-60/config.ini
+++ b/images/tham-ni-xop-mau-60/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-ni-xop-mau-60.html
 lastopen = 2024-06-06 16:51:51
 
 [search]
-lastsearch = 2024-07-31 14:45:41
+lastsearch = 2024-08-01 02:59:00
 
 [thamaulac.com.vn]
 match = -88.9%%
@@ -12,9 +12,9 @@ title = THẢM XỐP ÂU LẠC – Hàng Việt Nam chất lượng cao
 url = https://thamaulac.com.vn/
 
 [xoptraisan.info]
-match = -172.2%%
-title = Thảm xốp trải sàn 60x60 họa tiết tranh giao thông cao cấp ...
-url = https://xoptraisan.info/tham-xop-tranh-giao-thong-60x60
+match = -138.9%%
+title = Thảm xốp Tường Lâm - thương hiệu hàng Việt Nam chất ...
+url = https://xoptraisan.info/tham-xop-tuong-lam-cao-cap
 
 [thamvinhthuan.com]
 match = 16.7%%
