--- a/images/ga-chun-dreamland-180x200-ct/config.ini
+++ b/images/ga-chun-dreamland-180x200-ct/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/ga-chun-dreamland-180x200-ct.html
 lastopen = 2024-06-07 01:32:20
 
 [search]
-lastsearch = 2024-08-01 03:16:15
+lastsearch = 2024-08-01 03:28:53
 
 [demxanh.com]
 match = -42.9%%
 title = Bộ chăn ga gối cotton 5 món chăn hè ga chun chần 01
-url = https://demxanh.com/bo-chan-ga-goi-cotton-5-mon-chan-he-ga-chun-chan-01.html
+url = https://demxanh.com/bo-chan-ga-goi-cotton-5-mon-chan-he-ga-chun-chan-01.html?srsltid=AfmBOopS1tuwgtnnTI1zR5jHqDkApZpotVm6L8BIGxMzZZvKh0sOy2w4
 
 [www.diepxuan.com]
-match = -3.6%%
-title = Bộ chun chần WarmDream 180x200 lụa - Điệp Xuân
-url = https://www.diepxuan.com/bo-chun-chan-warmdream-180x200-lua.html
+match = 10.7%%
+title = Bộ ga chun chần MC20208 180x200 - Điệp Xuân
+url = https://www.diepxuan.com/bo-ga-chun-chan-mc20208-180x200.html?srsltid=AfmBOoph9dSJR3gE2Bo9NXmtma2y678JSzfV3Z8HglYgCfBxHeKg2ZpK
 
 [mgaleg.maryland.gov]
 match = -75.0%%
