--- a/images/chieu-lac-d2-14/config.ini
+++ b/images/chieu-lac-d2-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-d2-14.html
 lastopen = 2024-06-21 06:28:49
 
 [search]
-lastsearch = 2024-08-01 03:15:13
+lastsearch = 2024-08-01 04:47:05
 
 [www.diepxuan.com]
 match = 33.3%%
@@ -17,9 +17,9 @@ title = Sơ đồ sân bay Tân Sơn Nhất ga nội địa, quốc tế MỚI N
 url = https://vinpearl.com/vi/so-do-san-bay-tan-son-nhat
 
 [www.facebook.com]
-match = -200.0%%
-title = Ways Station Bình Thạnh: 🏠 281 Nguyễn Văn Đậu, P. ...
-url = https://www.facebook.com/photo.php?fbid=1176105412820080&id=139181649845800&set=a.179106562519975
+match = -180.0%%
+title = MOVSA - Melbourne Overseas Vietnamese Student ...
+url = https://www.facebook.com/movsa.vn/posts/-𝐃𝐄𝐏𝐀𝐑𝐓𝐔𝐑𝐄-𝐁𝐑𝐈𝐄𝐅𝐈𝐍𝐆-𝐊𝐈𝐂𝐊-𝐒𝐓𝐀𝐑𝐓-️𝐌𝐎𝐕𝐒𝐀-𝐱-𝐒𝐄𝐓-𝐄𝐃𝐔𝐂𝐀𝐓𝐈𝐎𝐍___________________________/754660916690225/
 
 [phongthuykyhoa.com]
 match = -73.3%%
