--- a/images/chieu-lac-d2-16/config.ini
+++ b/images/chieu-lac-d2-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-d2-16.html
 lastopen = 2024-06-06 16:54:08
 
 [search]
-lastsearch = 2024-08-01 00:38:56
+lastsearch = 2024-08-01 04:50:36
 
 [vinatools.com]
 match = -140.0%%
@@ -47,9 +47,9 @@ title = Cowon D2 gia nhập 'câu lạc bộ 16 GB'
 url = https://vnexpress.net/cowon-d2-gia-nhap-cau-lac-bo-16-gb-1500501.html
 
 [www.facebook.com]
-match = -53.3%%
-title = Black Kingdom - D2 - Facebook
-url = https://www.facebook.com/photo.php?fbid=925380399591113&id=100063574839369&set=a.647966903999132&locale=vi_VN
+match = -233.3%%
+title = Ngày mai 7/3 chi nhánh 16 (73 Nguyễn... - Ways Station ...
+url = https://www.facebook.com/waysstation/posts/ngày-mai-73-chi-nhánh-16-73-nguyễn-văn-lạc-bình-thạnh-chính-thức-hoạt-động-lại-n/1220849978345623/
 
 [banhang.shopee.vn]
 match = -66.7%%
