--- a/images/ga-chun-dreamland-180x200-ct/config.ini
+++ b/images/ga-chun-dreamland-180x200-ct/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/ga-chun-dreamland-180x200-ct.html
 lastopen = 2024-06-07 01:32:20
 
 [search]
-lastsearch = 2024-08-01 03:28:53
+lastsearch = 2024-08-01 04:51:58
 
 [demxanh.com]
-match = -42.9%%
-title = Bộ chăn ga gối cotton 5 món chăn hè ga chun chần 01
-url = https://demxanh.com/bo-chan-ga-goi-cotton-5-mon-chan-he-ga-chun-chan-01.html?srsltid=AfmBOopS1tuwgtnnTI1zR5jHqDkApZpotVm6L8BIGxMzZZvKh0sOy2w4
+match = -7.1%%
+title = Bộ ga chun Cotton chống thấm màu xanh ngọc
+url = https://demxanh.com/bo-ga-chun-cotton-chong-tham-mau-xanh-ngoc.html
 
 [www.diepxuan.com]
 match = 10.7%%
 title = Bộ ga chun chần MC20208 180x200 - Điệp Xuân
-url = https://www.diepxuan.com/bo-ga-chun-chan-mc20208-180x200.html?srsltid=AfmBOoph9dSJR3gE2Bo9NXmtma2y678JSzfV3Z8HglYgCfBxHeKg2ZpK
+url = https://www.diepxuan.com/bo-ga-chun-chan-mc20208-180x200.html
 
 [mgaleg.maryland.gov]
 match = -75.0%%
